# release-zips-action

./: .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Justfile  README.md  action.yml  pyproject.toml  requirements.txt
.github/workflows/: dangerjs.yml
release_zips/: release_zips.py
